sandbox/output
StringCalculator.java:10: error: incompatible types: String cannot be converted to int
                    result += number;
                              ^
1 error
